--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/applicationdb
 spring.datasource.username=root
 spring.datasource.passoword=
 spring.jpa.hibernate.ddl-auto=update
+spring.mvc.view.prefix=/WEB-INF/
+spring.mvc.view.suffix=.jsp
