--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/applicationdb
 spring.datasource.username=root
-spring.datasource.passoword=
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.mvc.view.prefix=/WEB-INF/
 spring.mvc.view.suffix=.jsp
